--- a/assets/icons/htmlforediting/mod-1.html
+++ b/assets/icons/htmlforediting/mod-1.html
@@ -9,17 +9,17 @@
 		<script src="js/main.js"></script>
 	</head>
 	<body>
-	<div id="top">
-		<form id="newSessionForm">
-			<div class="newses">
-				<input id="newSessionName" class="newSessionName" type="text" placeholder="Name of the Session">
-				<button id="submit-btn" class="submit-btn" type="submit" value="Save">
-			</div>
-		</form>
-	</div>
-	<div class="mid" id="mid">
-		
-	</div>
+		<div id="top">
+			<form id="newSessionForm">
+				<div class="newses">
+					<input id="newSessionName" class="newSessionName" type="text" placeholder="Name of the Session">
+					<input class="submit-btn" type="submit" value="Save">
+				</div>
+			</form>
+		</div>
+		<div class="mid" id="mid">
+			
+		</div>
 </body>
 </html>
 
