--- a/options.html
+++ b/options.html
@@ -3,9 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Youtube Cleaner</title>
+    <title>Digital WellBeing</title>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
     <script src="js/jquery-1.9.1.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/general.css">
@@ -33,6 +33,25 @@
     </div>
 
 
+    <div id="nav1">
+      <div id="top">
+        <form id="newSessionForm">
+          <div class="newses">
+            <input id="newSessionName" class="newSessionName" type="text" placeholder="Name of the Session">
+            <input class="submit-btn" type="submit" value="Save">
+          </div>
+        </form>
+      </div>
+      <div class="mid" id="mid">
+        
+      </div>
+    </div>
+
+    <div id="nav4">
+      <div class="option1"><label class="option-text" for="auto_skip_ads">Disable Ads</label><div class="check"><label class="switch"> <input type="checkbox" id="auto_skip_ads" class="auto_skip_ads" value="auto_skip_ads" unchecked />    <span class="slider round"></span></label></div></div>  <div class="option2">    <label class="option-text" for="remove_entire_sidebar">      Center contents    </label>    <div class="check">      <label class="switch">        <input type="checkbox" id="remove_entire_sidebar" class="remove_entire_sidebar" value="remove_entire_sidebar" unchecked />        <span class="slider round"></span>      </label>    </div>  </div>    <div class="option3">    <label class="option-text" for="remove_comments">      Disable Comments    </label>    <div class="check">      <label class="switch">        <input type="checkbox" id="remove_comments" class="remove_comments" value="remove_comments" unchecked />        <span class="slider round"></span>      </label>    </div>  </div>  <div class="manage_history-btn" id="manage_history_container">    <a id="manage_history" href="https://myactivity.google.com/product/youtube" target="_blank"><label class="manage_history-text">Manage YouTube History</label> </a>  </div>
+    </div>
+
+
 </div>
     <div class="nav" id="nav">
       <button class="nav-btn mod_1" id="btn-mod-1">
@@ -51,8 +70,8 @@
 
     <script src="js/options.js"></script>
     <script src="js/nav.js"></script>
-    <!-- <script src="js/main.js"></script>
-    <script src="js/jquery-1.9.1.min.js"></script> -->
+    <script src="js/main.js"></script>
+    <!-- <script src="js/jquery-1.9.1.min.js"></script> -->
   </body>
 
 </html>
