--- a/options.html
+++ b/options.html
@@ -24,13 +24,14 @@
       <div class='header-text' id='header-text'><h3>Digital WellBeing</h3> </div>
     </div>
 <div id="navarea">
-  
+  <div id="home">
     <div>
       <img class="home-img" src="assets\icons\icon128.png" alt="Digital WellBeing Logo">
     </div>
     <div class="home-text">
       <label class="home-head">Digital WellBeing</label>
       <label class="home-sub">Make work in Internet work for you</label>
+    </div>
     </div>
 
 
