--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,11 @@
     <script src="js/jquery-1.9.1.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/general.css">
-    <link rel="stylesheet" type="text/css" href="css/mod_4.css">
+    
     <link rel="stylesheet" type="text/css" href="css/mod_1.css">
+    <link rel="stylesheet" type="text/css" href="css/mod_2.css">
     <link rel="stylesheet" type="text/css" href="css/mod_3.css">
+    <link rel="stylesheet" type="text/css" href="css/mod_4.css">
 
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -60,17 +62,17 @@
     <div class="nav2" id="nav2">
       <div class="app-box">
         <div class="app-inner">
-          <div class="title">
-            <span>Timer</span>
-          </div>
+          <!-- <div class="title"> -->
+            <label class="title">Timer</label>
+          <!-- </div> -->
           <div class="timer-wrap">
             <div id="timer">
               <div class="circle"></div>
             </div>
             <div class="time">
-              <input type="text" maxlength="2" value="00" id="hh"><span>h</span>
-              <input type="text" maxlength="2" value="00" id="mm"><span>m</span>
-              <input type="text" maxlength="2" value="00" id="ss"><span>s</span>
+              <input class="inp hh" type="text" maxlength="2" value="00" id="hh"><span>h</span>
+              <input class="inp mm" type="text" maxlength="2" value="00" id="mm"><span>m</span>
+              <input class="inp ss" type="text" maxlength="2" value="00" id="ss"><span>s</span>
             </div>
           </div>
           <div class="action">
