--- a/popup.html
+++ b/popup.html
@@ -164,7 +164,7 @@
     <script src="js/popup-mod2.js"></script>
     <script src="js/popup-mod3.js"></script>
     <script src="js/popup-mod4.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/popup-mod1.js"></script>
     <script src="js/nav.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     
