--- a/popup.html
+++ b/popup.html
@@ -90,9 +90,9 @@
 
     <div class="nav3" id="nav3">
       <div class="mod3nav">
-        <a class="link today" id="today" href="#">Today</a>
-        <a class="avg link" id="average" href="#">Average</a>
-        <a class="all link" id="all" href="#">All Time</a>
+        <a class="mod3-btn today" id="today" href="#">Today</a>
+        <a class="mod3-btn avg" id="average" href="#">Average</a>
+        <a class="mod3-btn all" id="all" href="#">All Time</a>
         <a class="options" id="options" href="#">Options</a>
       </div>
       <div style="clear: both;"></div>
