--- a/popup.html
+++ b/popup.html
@@ -70,7 +70,7 @@
               <div class="check2">
                 <label class="always-text">Always ON:</label>
                 <label class="switch always-switch">
-                  <input type="checkbox" id="always-on" class="always-on" value="always-on" unchecked />
+                  <input type="checkbox" id="always_on" class="always_on" value="always_on" checked />
                   <span class="slider round"></span>
                 </label>
               </div>
