--- a/blocked.html
+++ b/blocked.html
@@ -9,6 +9,23 @@
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
     <body>
-        This website is blocked.
+        <!-- This website is blocked. -->
+        <div id="home">
+            <div class="pri">
+                            <div>
+              <img class="home-img" src="assets\icons\icon128.png" alt="Digital WellBeing Logo">
+            </div>
+            <div class="home-text">
+              <label class="home-head">Digital WellBeing</label>
+              <label class="home-sub">Make work in Internet work for you</label>
+            </div>
+          </div>
+          <div class="sec">
+            <input class="blocked-text" id="blocked-text" type="button" value="Blocked">
+            <div class="blocked-subtext" id="blocked-subtext">The website you are trying to access has been blocked by the extension Digital WellBeing.</div>
+            <div class="naughty" id="naughty"><img src="assets\blocked\naughty.gif"></div>
+          </div>
+          </div>
+          <script src="js/blocked.js"></script>
     </body>
 </html>
