--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-<!-- nav 1  ------------------------------------------------------------------------------- -->
+<!-- nav 1  ----------------------------------------------------------------------------- -->
 
   <div id="nav1">
     <div id="top">
@@ -136,9 +136,9 @@
           </label>
         </div>
       </div>
-      <div class="manage_history-btn" id="manage_history_container">
-        <a id="manage_history" href="https://myactivity.google.com/product/youtube" target="_blank">
-          <label class="manage_history-text">Manage YouTube History</label>
+      <!-- <div class="manage_history-btn" id="manage_history_container"> -->
+        <a id="manage_history" class="manage_history-btn" href="https://myactivity.google.com/product/youtube" target="_blank">
+          <!-- <label class="manage_history-text">Manage YouTube History</label> -->
         </a> 
       </div>
     </div>
