--- a/popup.html
+++ b/popup.html
@@ -137,7 +137,7 @@
         </div>
       </div>
       <!-- <div class="manage_history-btn" id="manage_history_container"> -->
-        <a id="manage_history" class="manage_history-btn" href="https://myactivity.google.com/product/youtube" target="_blank">
+        <a id="manage_history" class="manage_history-btn" href="https://myactivity.google.com/product/youtube" target="_blank">Manage Youtube History</a>
           <!-- <label class="manage_history-text">Manage YouTube History</label> -->
         </a> 
       </div>
