--- a/popup.html
+++ b/popup.html
@@ -68,11 +68,7 @@
               <input class="time-inp mm" type="text" maxlength="2" value="00" id="mm">
               <input class="time-inp ss" type="text" maxlength="2" value="00" id="ss">
               <div class="check2">
-                <label class="always-text">Always ON:</label>
-                <label class="switch always-switch">
-                  <input type="checkbox" id="always_on" class="always_on" value="always_on" checked />
-                  <span class="slider round"></span>
-                </label>
+                <input class="alway_on" id="always_on" type="button" value="Blocked">
               </div>
             </div>
             </div>
