--- a/popup.html
+++ b/popup.html
@@ -68,7 +68,7 @@
               <input class="time-inp mm" type="text" maxlength="2" value="00" id="mm">
               <input class="time-inp ss" type="text" maxlength="2" value="00" id="ss">
               <div class="check2">
-                <input class="alway_on" id="always_on" type="button" value="Blocked">
+                <input class="always_on" id="always_on" type="button" value="Unblock">
               </div>
             </div>
             </div>
